# syncode-feat-mcode-fork-synara

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  TEST_SUMMARY.md  cliff.toml  docker-compose.yml
.claude/: registry.json
.githooks/: README.md  pre-commit
.masday/: link-node-modules.sh
.playwright-mcp/: page-2026-07-05T11-08-52-437Z.yml  page-2026-07-05T11-39-03-109Z.yml  page-2026-07-05T11-39-33-614Z.yml  page-2026-07-05T11-39-55-634Z.yml  page-2026-07-05T11-40-26-698Z.yml  page-2026-07-05T11-40-53-802Z.yml  page-2026-07-05T11-43-45-325Z.yml  page-2026-07-05T11-45-07-641Z.yml  page-2026-07-05T11-47-12-173Z.yml  page-2026-07-05T11-48-00-099Z.yml  page-2026-07-05T11-48-26-439Z.yml  page-2026-07-05T11-49-18-626Z.yml  page-2026-07-05T11-49-44-600Z.yml
crates/syncode-auth/: AUTH.md  Cargo.toml
crates/syncode-auth/src/: authenticator.rs  config.rs  credential.rs  lib.rs  pairing.rs  policy.rs  principal.rs  secret_store.rs  session.rs
crates/syncode-auth/tests/: auth_e2e.rs
crates/syncode-automation/: AUTOMATION.md  Cargo.toml
crates/syncode-automation/src/: completion_eval.rs  completion_harness.rs  definition.rs  events.rs  executor.rs  in_memory_repo.rs  lib.rs  policies.rs  process_executor.rs  run_reactor.rs  runner.rs  schedule.rs  scheduler.rs  worktree.rs
crates/syncode-automation/tests/: automation_e2e.rs
crates/syncode-contracts/: CONTRACTS.md  Cargo.toml  build.rs
crates/syncode-contracts/src/: events.rs  lib.rs  rpc.rs  snapshots.rs
crates/syncode-core/: CORE.md  Cargo.toml
crates/syncode-core/src/: lib.rs
crates/syncode-core/src/agent/: harness.rs  mod.rs  state.rs
crates/syncode-core/src/application/: mod.rs
crates/syncode-core/src/domain/: activity.rs  events.rs  message.rs  mod.rs  primitives.rs  project.rs  thread.rs  turn.rs
crates/syncode-core/src/ports/: mod.rs
crates/syncode-core/src/util/: mod.rs  path.rs  subprocess.rs
crates/syncode-git/: Cargo.toml  GIT.md
crates/syncode-git/src/: checkpoint.rs  diff.rs  lib.rs  service.rs  stacked_actions.rs  worktree.rs
crates/syncode-git/tests/: git_e2e.rs
crates/syncode-http/: Cargo.toml  HTTP.md
crates/syncode-http/src/: lib.rs  middleware.rs  routes.rs
crates/syncode-memory/: Cargo.toml  MEMORY.md
crates/syncode-memory/migrations/: 20260720_memory_graph.sql  20260720_memory_vectors.sql
crates/syncode-memory/src/: hybrid.rs  lib.rs  provider.rs  sqlite_store.rs
crates/syncode-memory/src/backends/: episodic.rs  graph.rs  mod.rs  vector.rs
crates/syncode-memory/tests/: hybrid_composition.rs  sqlite_store_integration.rs
crates/syncode-memory/tests/common/: mod.rs
crates/syncode-orchestration/: Cargo.toml  ORCHESTRATION.md
crates/syncode-orchestration/src/: critic.rs  dag.rs  decider.rs  events.rs  lib.rs  log.rs  pipeline.rs  projector.rs  read_model.rs  use_cases.rs  workflow.rs  workflow_state.rs
crates/syncode-orchestration/src/reactors/: command.rs  ingestion.rs  mod.rs
crates/syncode-orchestration/tests/: orchestration_e2e.rs
crates/syncode-persistence/: Cargo.toml  PERSISTENCE.md
crates/syncode-persistence/migrations/: 001_initial_schema.sql  20240101000001_domain_events.sql  20240101000002_snapshots.sql  20240101000003_server_config.sql  20240101000004_server_settings.sql  20260720000001_thread_workflow_links.sql
crates/syncode-persistence/src/: adapters.rs  event_store.rs  lib.rs  projections.rs  settings_store.rs  snapshot.rs  thread_workflow_link.rs
crates/syncode-persistence/src/migrations/: mod.rs
crates/syncode-persistence/tests/: persistence_e2e.rs
crates/syncode-provider/: Cargo.toml  PROVIDERS.md
crates/syncode-provider/src/: acp.rs  acp_provider.rs  bin_resolver.rs  codex_app_server.rs  lib.rs  opencode_server.rs  pi_rpc.rs  registry.rs  session.rs  subprocess.rs  trait_def.rs
crates/syncode-provider/src/adapters/: anthropic.rs  claude.rs  codex.rs  cursor.rs  gemini.rs  grok.rs  kilo.rs  mod.rs  openai.rs  opencode.rs  pi.rs
crates/syncode-provider/tests/: claude_e2e.rs  codex_e2e.rs  gemini_e2e.rs  kilo_e2e.rs  opencode_e2e.rs  pi_e2e.rs
crates/syncode-tauri/: Cargo.toml  README.md  TAURI.md  tauri.conf.json
crates/syncode-tauri/capabilities/: default.json
crates/syncode-tauri/icons/: icon.icns
crates/syncode-tauri/src/: browser_commands.rs  commands.rs  desktop_commands.rs  filesystem_commands.rs  git_commands.rs  lib.rs  main.rs  paths.rs  process_ext.rs  shell_commands.rs  terminal_commands.rs  tray.rs  updater.rs  ws_commands.rs  ws_setup.rs
crates/syncode-tauri/tests/: boot_e2e.rs  v015_smoke.rs  ws_spawn.rs
crates/syncode-terminal/: Cargo.toml  TERMINAL.md
crates/syncode-terminal/src/: lib.rs  output.rs  persistence.rs  pty.rs  session.rs
crates/syncode-terminal/tests/: scrollback_persistence.rs  terminal_e2e.rs
crates/syncode-ws/: Cargo.toml  WS.md
crates/syncode-ws/src/: auth.rs  auth_rest.rs  channels.rs  code_search.rs  completion.rs  lib.rs  llm.rs  local_server.rs  mcp_catalog.rs  orchestration_executor.rs  orchestrator_setup.rs  project_fs.rs  provider_versions.rs  push.rs  rpc.rs  server.rs  settings.rs  skills_catalog.rs  thread_workflow_bridge.rs  transport.rs  usage.rs  voice.rs  workflow_preamble.rs
crates/syncode-ws/tests/: code_search_e2e_live.rs  code_search_rpc.rs  mcp_rpc.rs  provider_e2e.rs  thread_workflow_bridge_e2e.rs  ws_e2e.rs
docs/: ARCHITECTURE.md  COMPARISON-FRONTEND-MCODE-vs-SYNCODE.md  COMPARISON-MCODE-vs-SYNCODE.md  CONTRACTS-BRIDGE-DESIGN.md  CRATES.md  MOCK-DATA-CLEANUP-PLAN.md  PRD-REMAINING-GAPS.md  PRODUCTION-READINESS.md  RESEARCH-synara-vs-syncode-cmd-window.md  SHELL-GAPS.md  STATUS.md
e2e-desktop/: package-lock.json  package.json  tsconfig.json  wdio.conf.ts
frontend/: e2e-browser-run.cjs  e2e-capture-raw-push.cjs  e2e-chat-agentic-workflow.cjs  e2e-chat-cycle-all.cjs  e2e-chat-cycle-drive.cjs  e2e-dom-dump.cjs  e2e-probe-picker.cjs  e2e-project-cycle.cjs  e2e-realistic-chat.cjs  e2e-routes.cjs  e2e-stuck-working-repro.cjs  e2e-ws-pong.cjs  (+8 more)
tests/: Cargo.toml  agentic_smoke.rs  workspace_integration.rs
(+321 files in other folders)
