[workspace]
resolver = "2"
members = [
    "crates/syncode-core",
    "crates/syncode-contracts",
    "crates/syncode-orchestration",
    "crates/syncode-provider",
    "crates/syncode-git",
    "crates/syncode-terminal",
    "crates/syncode-automation",
    "crates/syncode-persistence",
    "crates/syncode-memory",
    "crates/syncode-auth",
    "crates/syncode-ws",
    "crates/syncode-http",
    "crates/syncode-tauri",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Syncode Team"]
license = "MIT"
repository = "https://github.com/syncode/syncode"
rust-version = "1.85.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = "0.26"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TypeScript bridge
# `no-serde-warnings` silences ts-rs's "failed to parse serde attribute" diagnostics for
# attributes it can't map (e.g. `transparent`, `skip_serializing_if = "Option::is_none"`).
# Contracts never relies on serde-compat for TS shape — every type carries an explicit
# `#[ts(...)]` override — so suppressing these proc-macro warnings is safe.
ts-rs = { version = "10", features = ["serde-compat", "no-serde-warnings"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Git
git2 = "0.20"

# Terminal
portable-pty = "0.9"

# Validation
garde = { version = "0.22", features = ["derive"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Chrono
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Tauri
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

# Internal crates
syncode-core = { path = "crates/syncode-core" }
syncode-contracts = { path = "crates/syncode-contracts" }
syncode-orchestration = { path = "crates/syncode-orchestration" }
syncode-provider = { path = "crates/syncode-provider" }
syncode-git = { path = "crates/syncode-git" }
syncode-terminal = { path = "crates/syncode-terminal" }
syncode-automation = { path = "crates/syncode-automation" }
syncode-persistence = { path = "crates/syncode-persistence" }
syncode-memory = { path = "crates/syncode-memory" }
syncode-auth = { path = "crates/syncode-auth" }
syncode-ws = { path = "crates/syncode-ws" }
syncode-http = { path = "crates/syncode-http" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
