[package]
name = "syncode-automation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Automation scheduler — cron, interval, one-shot, run lifecycle, policies"

[dependencies]
syncode-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
cron = "0.15"
async-trait = "0.1"
