[package]
name = "syncode-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared domain kernel for Syncode — entities, value objects, events, and port interfaces"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
dunce = "1"

[dev-dependencies]
tempfile = "3"
