[package]
name = "syncode-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared domain kernel for Syncode — entities, value objects, events, and port interfaces"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
dunce = "1"
# tokio::process::Command is used by `util::subprocess` (the shared
# CREATE_NO_WINDOW chokepoint for hiding child console windows on Windows).
# Already a transitive dep of every consumer; declaring it directly here makes
# the helper available to all crates (syncode-provider/git/ws/automation/tauri).
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
