[package]
name = "syncode-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP API — routes and middleware"

[dependencies]
syncode-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
