[package]
name = "syncode-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP API — routes and middleware"

[dependencies]
syncode-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# `reqwest` fetches `<url>/favicon.ico` for the `/api/site-favicon` proxy
# (crates/syncode-http/src/routes.rs). CSP forbids the webview from fetching
# cross-origin directly, so the server proxies the request. Workspace-pinned.
reqwest = { workspace = true }

[dev-dependencies]
# `tower` with `util` provides `ServiceExt::oneshot` for routing unit tests.
tower = { version = "0.5", features = ["util"] }
# `http-body-util` provides `BodyExt::collect` to read response bodies in tests.
http-body-util = "0.1"
tokio = { workspace = true }
