[package]
name = "syncode-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Persistent memory layer — MemoryProvider trait + SQLite-backed interaction store"

[features]
default = []
# Enable the pgvector-backed VectorBackend. Pulls in fastembed (~50 MB
# compiled + ~250 MB model cached at first use) and sqlx's Postgres backend.
# Off by default; opt in via --features syncode-memory/pgvector.
pgvector = ["dep:fastembed", "dep:pgvector", "sqlx/postgres"]
# Extra: include integration tests that require a live Postgres + pgvector.
# Ignored unless SYNCODE_TEST_PGVECTOR=1 + DATABASE_URL is set at runtime.
pgvector-integration = ["pgvector"]
# Enable the Apache AGE-backed GraphBackend. Requires Postgres + AGE.
age = ["sqlx/postgres"]
# AGE integration tests — require SYNCODE_TEST_AGE=1 + DATABASE_URL.
age-integration = ["age"]

[dependencies]
async-trait = "0.1"
chrono = { workspace = true }
fastembed = { version = "5", optional = true, default-features = false }
pgvector = { version = "0.4", optional = true, features = ["sqlx"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
