[package]
name = "syncode-persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Persistence layer — event store, projections, read model tables, snapshots"

[dependencies]
syncode-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
uuid = { workspace = true }
chrono = { workspace = true }
