[package]
name = "syncode-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tauri desktop integration — app shell, IPC commands, auto-update, system tray"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
syncode-core = { workspace = true }
syncode-git = { workspace = true }
syncode-terminal = { workspace = true }
syncode-ws = { workspace = true }
# WS-server spawn inside the Tauri shell (DSK-1): the desktop binary embeds
# the same axum WS server the standalone `syncode-ws` binary exposes, so the
# web UI can connect to a single in-process backend. These deps mirror
# `crates/syncode-ws/src/bin/server.rs` (orchestrator + SQLite repo + provider
# adapter + axum serve).
syncode-orchestration = { workspace = true }
syncode-persistence = { workspace = true }
syncode-provider = { workspace = true }
axum = { workspace = true }
tauri = { workspace = true }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
# Native OS file/folder picker (P4-4 filesystem.browse). Cross-platform:
# Win32 common dialogs, macOS NSOpenPanel, Linux portal/xdg.
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
# Integration test (tests/ws_spawn.rs) connects to the booted WS server over
# real TCP and round-trips a JSON-RPC frame — needs a WS client + stream util.
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
