[package]
name = "syncode-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tauri desktop integration — app shell, IPC commands, auto-update, system tray"

# Enables the Tauri webview DevTools API (`open_devtools`/`close_devtools`/
# `is_devtools_open`) so the `toggle_devtools` IPC command works in a release
# build. Without this feature those symbols are stripped and DevTools is
# entirely unavailable in release (the v0.1.6 regression). Release builds in
# `.github/workflows/release.yml` pass `--features devtools`.
[features]
# `devtools` is DEFAULT-ON so the webview DevTools API (`open_devtools`/
# `close_devtools`/`is_devtools_open`) + the `toggle_devtools` IPC command +
# the F12/Ctrl+Shift+I binding (`main.tsx`) work in EVERY build, including
# GitHub release builds. Previously this was opt-in via `--features devtools`
# in release.yml, but if the flag isn't forwarded the `toggle_devtools`
# command compiles to a silent no-op and F12 does nothing — the "devtools
# silent error". Default-on guarantees it. (Builds that want a leaner binary
# can pass `--no-default-features`.)
default = ["devtools"]
devtools = ["tauri/devtools"]
# Embedded WebDriver server + WebdriverIO backend access for functional
# desktop testing. Off by default (never in shipped releases).
webdriver = [
    "dep:tauri-plugin-wdio-webdriver",
    "dep:tauri-plugin-wdio",
]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
syncode-core = { workspace = true }
syncode-terminal = { workspace = true }
syncode-ws = { workspace = true }
# WS-server spawn inside the Tauri shell (DSK-1): the desktop binary embeds
# the same axum WS server the standalone `syncode-ws` binary exposes, so the
# web UI can connect to a single in-process backend. These deps mirror
# `crates/syncode-ws/src/bin/server.rs` (orchestrator + SQLite repo + provider
# adapter + axum serve).
syncode-orchestration = { workspace = true }
syncode-persistence = { workspace = true }
syncode-provider = { workspace = true }
axum = { workspace = true }
tauri = { workspace = true }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
# WebdriverIO desktop functional testing (embedded WebDriver server). Gated
# behind the `webdriver` feature — NEVER ship in a production release build
# (the embedded driver lets any local client drive the webview). Test/dogfood
# binaries only: `cargo build --release --features webdriver`.
tauri-plugin-wdio-webdriver = { version = "1", optional = true }
tauri-plugin-wdio = { version = "1", optional = true }
# Native OS file/folder picker (P4-4 filesystem.browse). Cross-platform:
# Win32 common dialogs, macOS NSOpenPanel, Linux portal/xdg.
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
# Integration test (tests/ws_spawn.rs) connects to the booted WS server over
# real TCP and round-trips a JSON-RPC frame — needs a WS client + stream util.
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
# v0.1.5 smoke E2E (tests/v015_smoke.rs) hits the HTTP routes (/health,
# /api/editor-icon, /api/local-image, /api/site-favicon) and the 10 auth
# REST routes mounted on the same Axum app. Workspace-pinned.
reqwest = { workspace = true }
