[package]
name = "syncode-ws"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebSocket transport — JSON-RPC server, push bus, channels, connection state machine"

[dependencies]
syncode-core = { workspace = true }
syncode-contracts = { path = "../syncode-contracts" }
syncode-orchestration = { path = "../syncode-orchestration" }
syncode-persistence = { path = "../syncode-persistence" }
syncode-auth = { path = "../syncode-auth" }
async-trait = "0.1"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
futures-util = "0.3"
