[package]
name = "syncode-ws"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebSocket transport — JSON-RPC server, push bus, channels, connection state machine"

[dependencies]
syncode-core = { workspace = true }
syncode-contracts = { path = "../syncode-contracts" }
syncode-orchestration = { path = "../syncode-orchestration" }
syncode-persistence = { path = "../syncode-persistence" }
syncode-auth = { path = "../syncode-auth" }
syncode-git = { path = "../syncode-git" }
syncode-terminal = { workspace = true }
syncode-automation = { workspace = true }
syncode-provider = { workspace = true }
# git2 is used directly for the advanced git RPCs (stash, fetch, init,
# removeIndexLock) that syncode-git's `GitService` trait does not expose.
# Stash uses `Repository::stash_save2`/`stash_foreach`/`stash_drop`/
# `stash_apply`; fetch uses `Remote::download`; init uses `Repository::init`.
# Same version pin as syncode-git (workspace `git2 = "0.20"`).
git2 = { workspace = true }
# `which` is used by the T6c-14 GitHub-API handlers to check whether the `gh`
# / `git` CLI is on PATH before spawning it (matches syncode-git's pattern).
which = "7"
async-trait = "0.1"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
futures-util = "0.3"
tempfile = "3"
