[package]
name = "syncode-ws"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebSocket transport — JSON-RPC server, push bus, channels, connection state machine"

[features]
# `stt` — real speech-to-text via the `whisper` CLI (whisper.cpp / OpenAI Python
# whisper). When ENABLED, `server.transcribeVoice` shells out to `whisper` to
# transcribe the posted audio blob; `voiceStart` probes for the binary; `voiceStop`
# is a flag-flip-back. When DISABLED (the default), all three return the graceful
# "STT not configured" stub — identical to today's behaviour, zero new deps.
# `base64` is only required when `stt` is on (decoding the posted audio blob).
default = []
stt = ["dep:base64", "dep:tempfile"]

[dependencies]
syncode-core = { workspace = true }
syncode-contracts = { path = "../syncode-contracts" }
syncode-orchestration = { path = "../syncode-orchestration" }
syncode-persistence = { path = "../syncode-persistence" }
syncode-auth = { path = "../syncode-auth" }
syncode-git = { path = "../syncode-git" }
syncode-terminal = { workspace = true }
syncode-automation = { workspace = true }
syncode-provider = { workspace = true }
# `syncode-http` owns the stateless REST routes (`/health`,
# `/api/project-favicon`) and reusable middleware. Merged into the WS app via
# `build_app` so the standalone server exposes one Axum app for both
# transports. L1 leaf depended on by this L4 crate (direction-correct).
syncode-http = { path = "../syncode-http" }
# git2 is used directly for the advanced git RPCs (stash, fetch, init,
# removeIndexLock) that syncode-git's `GitService` trait does not expose.
# Stash uses `Repository::stash_save2`/`stash_foreach`/`stash_drop`/
# `stash_apply`; fetch uses `Remote::download`; init uses `Repository::init`.
# Same version pin as syncode-git (workspace `git2 = "0.20"`).
git2 = { workspace = true }
# `which` is used by the T6c-14 GitHub-API handlers to check whether the `gh`
# / `git` CLI is on PATH before spawning it (matches syncode-git's pattern).
# Also used by the `stt` feature to probe for `whisper`/`ffmpeg`.
which = "7"
# `base64` decodes the audio blob posted to `server.transcribeVoice`. Optional —
# only pulled in when the `stt` feature is enabled (the default build keeps the
# graceful "STT not configured" stub and needs no decoder).
base64 = { version = "0.22", optional = true }
# `tempfile` writes the decoded audio blob to disk for the `whisper` CLI to
# read (whisper takes a path, not stdin). Optional — only under `stt`. The
# dev-dependency copy (below) covers the rpc.rs integration tests in both
# configs.
tempfile = { version = "3", optional = true }
async-trait = "0.1"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
# `reqwest` fetches the npm registry `/latest` endpoint for the provider-update
# version check (crates/syncode-ws/src/provider_versions.rs). Workspace-pinned.
reqwest = { workspace = true }
# `toml` parses `~/.codex/config.toml`'s `[mcp_servers]` table for the MCP
# discovery catalog (crates/syncode-ws/src/mcp_catalog.rs). Standard in the
# Rust MCP ecosystem; default feature set is sufficient.
toml = "0.8"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
futures-util = "0.3"
tempfile = "3"
